--- a/laptop_setup/roles/dirty/tasks/main.yml
+++ b/laptop_setup/roles/dirty/tasks/main.yml
@@ -8,6 +8,17 @@
   become: yes
   become_user: "{{ username }}"
 
+- name: "repose"
+  shell: "cd /home/packages && repose -fv custom" 
+  become: yes 
+  become_user: "{{ username }}"
+
+- name: "pacman update"
+  pacman: update_cache=yes force=yes                                                                                                    
+
+- name: "pacman upgrade"
+  pacman: update_cache=yes upgrade=yes
+
 - name: compile aur package
   command: "aursync -ck aurutils adapta-gtk-theme paper-icon-theme-git xsettingsd-git"
   become: yes
