--- a/laptop_setup/main.yml
+++ b/laptop_setup/main.yml
@@ -12,6 +12,7 @@
     - { role: user, username: "{{ username }}", tags: user }
     - { role: base, tags: base }
     - { role: systool, tags: systool }
+    - { role: nvim, tags: nvim }
     - { role: nettool, tags: nettool }
     - { role: i3, tags: i3 }
     - { role: gnome, tags: gnome }      
