--- a/laptop_setup/main.yml
+++ b/laptop_setup/main.yml
@@ -13,10 +13,11 @@
     - { role: base, tags: base }
     - { role: systool, tags: systool }
     - { role: nvim, tags: nvim }
+    - { role: gpg, tags: gpg }
     - { role: nettool, tags: nettool }
     - { role: i3, tags: i3 }
-    - { role: gnome, tags: gnome }      
+    - { role: gnome, tags: gnome }
     - { role: xserver, tags: xserver }
-    - { role: xapp, tags: xapp }      
-    - { role: aurutils, tags: aurutils }      
-    - { role: dirty, tags: dirty }      
+    - { role: xapp, tags: xapp }
+    - { role: aurutils, tags: aurutils }
+    - { role: dirty, tags: dirty }
