--- a/arch_install/main.yml
+++ b/arch_install/main.yml
@@ -3,14 +3,20 @@
 - hosts: localhost
   user: root
   connection: local
+
+  pre_tasks:
+    - fail:
+        msg: "'hostname' or 'root_password' variable is not defined"
+      when: hostname is undefined or root_password is undefined
+
   roles:
      - { role: partitioning, tags: partioning }
      - { role: mounting, tags: mounting }
      - { role: pacstrap, tags: pacstrap }
 
   post_tasks:
-        - name: mount pseudo file systems 
-          mount: 
+        - name: Mount pseudo file systems
+          mount:
             src: "/{{ item }}"
             name: "/mnt/{{ item }}"
             fstype: "{{ 'proc' if item == 'proc' else 'bind' }}"
@@ -21,42 +27,47 @@
             - sys
             - dev
             - run
-          tags: chroot
+
+        - name: Mount efivars
+          mount:
+            name: "/sys/firmware/efi/efivars"
+            src: "efivarfs"
+            fstype: "efivarfs"
+            state: "mounted"
 
 - hosts: /mnt
   user: root
   connection: chroot
 
-  vars_prompt:
-    - name: "root_password"
-      prompt: "Enter the root password"
-      private: yes
-
   roles:
    - { role: locale, tags: locale }
    - { role: time, tags: time }
-   - { role: bootloader, tags: bootloader }
-   - { role: fstab, tags: fstab }
    - { role: hostname, tags: hostname }
-   - { role: network, tags: network }
+   - { role: fstab, tags: fstab }
+   - { role: bootloader, tags: bootloader }
+  # - { role: network, tags: network }
 
   tasks:
-    - name: set root password
+    - name: Set root's password
       user: name=root password={{ root_password |password_hash('sha512') }}
       tags: root
 
-#  post_tasks:
-#    - name: umount pseudo file systems
-#      mount: 
-#        src: "/{{ item }}"
-#        name: "/mnt/{{ item }}"
-#        fstype: "{{ 'proc' if item == 'proc' else 'bind' }}" 
-#        state: "unmounted"
-#        opts: "rbind"
-#      with_items:
-#        - proc
-#        - sys
-#        - dev
-#        - run
-#      tags: umount
-#      connection: local
+  #- hosts: localhost
+  #  user: root
+  #  connection: local
+  #
+  #  tasks:
+  #  post_tasks:
+  #    - name: umount pseudo file systems
+  #      mount:
+  #        src: "/{{ item }}"
+  #        name: "/mnt/{{ item }}"
+  #        fstype: "{{ 'proc' if item == 'proc' else 'bind' }}"
+  #        state: "unmounted"
+  #        opts: "rbind"
+  #      with_items:
+  #        - proc
+  #        - sys
+  #        - dev
+  #        - run
+  #      tags: unchroot
