--- a/arch_install/roles/pacstrap/tasks/main.yml
+++ b/arch_install/roles/pacstrap/tasks/main.yml
@@ -1,4 +1,9 @@
 ---
 
-- name: pacstrap
-  command: "pacstrap /mnt base base-devel btrfs-progs ansible git intel-ucode networkmanager linux-lts"  
+- name: pacstrap on host
+  command: "pacstrap /mnt base base-devel btrfs-progs ansible git intel-ucode linux-lts"
+  when: ansible_virtualization_role == 'host'
+
+- name: pacstrap on guest
+  command: "pacstrap -c /mnt base base-devel btrfs-progs ansible git intel-ucode linux-lts"
+  when: ansible_virtualization_role == 'guest'
