--- a/arch_install/main.yml
+++ b/arch_install/main.yml
@@ -43,6 +43,7 @@
    - { role: locale, tags: locale }
    - { role: time, tags: time }
    - { role: hostname, tags: hostname }
+   - { role: snapper, tags: snapper }
    - { role: fstab, tags: fstab }
    - { role: bootloader, tags: bootloader }
   # - { role: network, tags: network }
