--- a/arch_install/main.yml
+++ b/arch_install/main.yml
@@ -41,17 +41,16 @@
 
   roles:
    - { role: locale, tags: locale }
-   - { role: time, tags: time }
-   - { role: hostname, tags: hostname }
+   - { role: systemd-firstboot, tags: systemd-firstboot }
    - { role: snapper, tags: snapper }
    - { role: fstab, tags: fstab }
    - { role: bootloader, tags: bootloader }
   # - { role: network, tags: network }
 
-  tasks:
-    - name: Set root's password
-      user: name=root password={{ root_password |password_hash('sha512') }}
-      tags: root
+  #  tasks:
+  #    - name: Set root's password
+  #      user: name=root password={{ root_password |password_hash('sha512') }}
+  #      tags: root
 
   #- hosts: localhost
   #  user: root
