--- a/laptop_setup/roles/systool/tasks/main.yml
+++ b/laptop_setup/roles/systool/tasks/main.yml
@@ -4,10 +4,9 @@
   pacman:
     name: "{{ item }}"
     state: present
+    update_cache: yes
   with_items:
     - htop
-    - vim-colorsamplerpack
-    - vim-airline
     - zsh-syntax-highlighting
   become: true
 
@@ -25,7 +24,7 @@
     dest: "/root/.zshrc"
 
 - name: change vt for root
-  user: name=root shell=/bin/zsh 
+  user: name=root shell=/bin/zsh
 
 - name: setup vim
   copy:
