--- a/laptop_setup/roles/aurutils/tasks/main.yml
+++ b/laptop_setup/roles/aurutils/tasks/main.yml
@@ -1,29 +1,2 @@
 ---
-
-- name: install devtools
-  pacman: name=devtools state=present
-
-- name: add custom in pacman.conf 
-  blockinfile:
-    dest: /etc/pacman.conf
-    insertafter: '#Server = '
-    block: |
-
-        [custom]
-        SigLevel = Optional TrustAll
-        Server = file:///home/packages
-    marker: "# {mark} ANSIBLE MANAGED BLOCK Custom"
-
-- name: create folder
-  command: "install -d /home/packages -o {{ username }} -g users -m 700"
-
-- name: create repo
-  command: "repo-add /home/packages/custom.db.tar"
-  become: yes
-  become_user: "{{ username }}"
-  
-- name: "pacman update"
-  pacman: update_cache=yes force=yes
-
-- name: "pacman upgrade"
-  pacman: update_cache=yes upgrade=yes
+# tasks file for aurutils
