--- a/laptop_setup/roles/xserver/tasks/main.yml
+++ b/laptop_setup/roles/xserver/tasks/main.yml
@@ -9,15 +9,17 @@
     - libva-intel-driver
     - xf86-input-libinput
 
-- name: locale x11
-  command: "localectl set-x11-keymap fr pc105 latin9 terminate:ctrl_alt_bksp"
+- name: 00-keyboard.conf
+  copy:
+    src: files/00-keyboard.conf
+    dest: "/etc/X11/xorg.conf.d/00-keyboard.conf"
 
-- name: add 10-monitor.conf
+- name: 10-monitor.conf
   copy:
     src: files/10-monitor.conf
     dest: "/etc/X11/xorg.conf.d/10-monitor.conf"
 
-- name: add 30-touchpad.conf
+- name: 30-touchpad.conf
   copy:
     src: files/30-touchpad.conf
     dest: "/etc/X11/xorg.conf.d/30-touchpad.conf"
