--- a/laptop_setup/roles/nvim/tasks/main.yml
+++ b/laptop_setup/roles/nvim/tasks/main.yml
@@ -4,36 +4,39 @@
   pacman:
     name: neovim
     state: present
+  become: yes
 
 - name: ensure nvim directory exists
   file:
-    path: "{{ ansible_env.HOME }}/.config/nvim/{{ item }}"
+    path: "/home/{{ username }}/.config/nvim/{{ item }}"
     recurse: yes
+    owner: "{{ username }}"
+    group: users
     state: directory
   with_items:
     - 'colors'
-    - 'autoload'  
+    - 'autoload'
 
 - name: install config file
   copy:
     src: files/init.vim
-    dest: "{{ ansible_env.HOME }}/.config/nvim/init.vim"
-    owner: "{{ ansible_env.USER }}"
+    dest: "/home/{{ username }}/.config/nvim/init.vim"
+    owner: "{{ username }}"
     group: users
     mode: 0644
 
 - name: install colors scheme
   copy:
     src: files/molokai.vim
-    dest: "{{ ansible_env.HOME }}/.config/nvim/colors/molokai.vim"
-    owner: "{{ ansible_env.USER }}"
+    dest: "/home/{{ username }}/.config/nvim/colors/molokai.vim"
+    owner: "{{ username }}"
     group: users
     mode: 0644
 
 - name: install vim-plug
   copy:
     src: files/plug.vim
-    dest: "{{ ansible_env.HOME }}/.config/nvim/autoload/plug.vim"
-    owner: "{{ ansible_env.USER }}"
+    dest: "/home/{{ username }}/.config/nvim/autoload/plug.vim"
+    owner: "{{ username }}"
     group: users
     mode: 0644
