--- a/laptop_setup/roles/xserver/files/30-touchpad.conf
+++ b/laptop_setup/roles/xserver/files/30-touchpad.conf
@@ -5,5 +5,5 @@ Section "InputClass"
         Option "Tapping" "on"
         Option "ClickMethod" "clickfinger"
         Option "ScrollMethod" "twofinger"
-        Option "ButtonMapping" "1 3 2 4 5"
+        Option "TappingButtonMap" "lmr"
 EndSection
