--- a/laptop_setup/main.yml
+++ b/laptop_setup/main.yml
@@ -31,5 +31,5 @@
     - { role: smart, tags: smart }
     - { role: xserver, tags: xserver }
     - { role: xapp, tags: xapp }
-      #- { role: aurutils, tags: aurutils }
+    - { role: aurutils, tags: aurutils }
       #- { role: dirty, tags: dirty }
