--- a/laptop_setup/roles/aurutils/tasks/main.yml
+++ b/laptop_setup/roles/aurutils/tasks/main.yml
@@ -29,3 +29,34 @@
       name: aurutils
       state: present
     become: true
+
+- name: Create custom repo configuration file
+  copy:
+    src: files/custom
+    dest: /etc/pacman.d/custom
+  become: true
+
+- name: Include custom repo in pacman.conf
+  lineinfile:
+    dest: /etc/pacman.conf
+    line: 'Include = /etc/pacman.d/custom'
+  become: true
+
+- name: Create cache directory
+  file:
+    path: /var/cache/pacman/custom
+    owner: '{{ username }}'
+    state: directory
+  become: true
+
+- name: Create database of custom repo
+  command: repo-add /var/cache/pacman/custom/custom.db.tar
+  args:
+    creates: /var/cache/pacman/custom/custom.db.tar
+  become: true
+
+- name: Synchronize pacman
+  pacman:
+    update_cache: yes
+    upgrade: yes
+  become: true
