--- a/laptop_setup/roles/nvim/tasks/main.yml
+++ b/laptop_setup/roles/nvim/tasks/main.yml
@@ -1,14 +1,13 @@
 ---
-
 - name: install neovim
   pacman:
     name: neovim
     state: present
-  become: yes
+  become: true
 
 - name: ensure nvim directory exists
   file:
-    path: "/home/{{ username }}/.config/nvim/{{ item }}"
+    path: "{{ ansible_user_dir }}/.config/nvim/{{ item }}"
     recurse: yes
     owner: "{{ username }}"
     group: users
@@ -16,27 +15,35 @@
   with_items:
     - 'colors'
     - 'autoload'
+  become: true
+  become_user: '{{ username }}'
 
 - name: install config file
   copy:
     src: files/init.vim
-    dest: "/home/{{ username }}/.config/nvim/init.vim"
+    dest: "{{ ansible_user_dir }}/.config/nvim/init.vim"
     owner: "{{ username }}"
     group: users
     mode: 0644
+  become: true
+  become_user: '{{ username }}'
 
 - name: install colors scheme
   copy:
     src: files/molokai.vim
-    dest: "/home/{{ username }}/.config/nvim/colors/molokai.vim"
+    dest: "{{ ansible_user_dir }}/.config/nvim/colors/molokai.vim"
     owner: "{{ username }}"
     group: users
     mode: 0644
+  become: true
+  become_user: '{{ username }}'
 
 - name: install vim-plug
   copy:
     src: files/plug.vim
-    dest: "/home/{{ username }}/.config/nvim/autoload/plug.vim"
+    dest: "{{ ansible_user_dir }}/.config/nvim/autoload/plug.vim"
     owner: "{{ username }}"
     group: users
     mode: 0644
+  become: true
+  become_user: '{{ username }}'
